# Fluter_Rust_messageApp

./: .gitignore  README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/Components/: auth_login_form.dart  auth_signin_form.dart  conversation_create.dart  conversation_list.dart  conversation_list_item.dart  message_create.dart  message_list.dart  top_bar_profile.dart
lib/Provider/: auth_provider.dart
lib/Screen/: auth_screen.dart  chat_screen.dart  dashboard_screen.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  lib.dart
lib/utils/: date_time.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugins.cmake
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml  messages.txt
rust/src/: frb_generated.rs  lib.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_fluter_rust_message_app.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_fluter_rust_message_app.podspec
rust_builder/windows/: CMakeLists.txt
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+1 files in other folders)
